Added Javadoc