@@ -227,7 +227,7 @@ public class UserController {
     public ResponseEntity<CreateUserDTO> getUserInfo(@RequestHeader String username) {
         SecurityContext context = SecurityContextHolder.getContext();
         String currUsername = context.getAuthentication().getName();
-        List<?> authhshss = context.getAuthentication().getAuthorities().stream().toList();
+        List<?> authhshss = context.getAuthentication().getAuthorities().stream().collect(Collectors.toList());
 
         if (!currUsername.equals(username) && authhshss.get(0).equals("DONOR")) {
             return ResponseEntity.badRequest().build();
@@ -259,7 +259,7 @@ public class UserController {
     public ResponseEntity<String> getEditUserInfo(@RequestBody UserInfoDTO newUserInfo, @RequestHeader String username) {
         SecurityContext context = SecurityContextHolder.getContext();
         String currUsername = context.getAuthentication().getName();
-        List<?> authhshss = context.getAuthentication().getAuthorities().stream().toList();
+        List<?> authhshss = context.getAuthentication().getAuthorities().stream().collect(Collectors.toList());
 
         if (!currUsername.equals(username) && authhshss.get(0).equals("DONOR")) {
             return ResponseEntity.badRequest().build();
